# IDE

./: .clippy.toml  .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  FOLLOWUPS.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  TECH_STACK.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.githooks/: pre-commit
.github/: dependabot.yml
crates/editor-ai-provider/: Cargo.toml
crates/editor-ai-provider/src/: anthropic.rs  config.rs  custom.rs  error.rs  http.rs  ledger.rs  lib.rs  ollama.rs  openai.rs  openai_compat.rs  probe.rs  provider.rs  rate_limit.rs  registry.rs  secrets.rs  sse.rs  types.rs
crates/editor-ai-provider/tests/: keyring_roundtrip.rs  wiremock_anthropic.rs  wiremock_custom.rs  wiremock_ollama.rs  wiremock_openai.rs
crates/editor-ai-tools/: Cargo.toml
crates/editor-ai-tools/src/: config.rs  error.rs  lib.rs  path.rs  registry.rs  tool.rs  transaction.rs
crates/editor-ai-tools/src/tools/: edit.rs  explore.rs  file_ops.rs  metadata_tasks.rs  mod.rs  replace.rs  shell.rs  skills.rs
crates/editor-ai-tools/tests/: m20_smoke.rs
crates/editor-app/: Cargo.toml  README.md  build.rs
crates/editor-app/assets/: sample.txt
crates/editor-app/benches/: input_hotpath.rs
crates/editor-app/src/: chat.rs  config.rs  lib.rs  main.rs  metrics.rs  perf_smoke.rs
crates/editor-app/src/chat/: mod.rs
crates/editor-app/src/chat/tools/: edit.rs  fs.rs  metadata.rs  mod.rs  shell.rs  skills.rs  tasks.rs
crates/editor-app/tests/: smoke.rs  smoke_test.rs
crates/editor-app/wix/: main.wxs
crates/editor-chat/: Cargo.toml
crates/editor-chat/src/: conversation.rs  engine.rs  error.rs  lib.rs
crates/editor-core/: Cargo.toml  README.md
crates/editor-core/benches/: rope_benches.rs
crates/editor-core/src/: cursor.rs  error.rs  lib.rs  position.rs  scroll.rs  selection.rs  undo.rs  word_nav.rs  worker.rs
crates/editor-core/src/buffer/: edit.rs  line_ending.rs  mod.rs
crates/editor-core/tests/: edits_proptest.rs  m08_acceptance_smoke.rs  proptest_rope_invariants.rs
crates/editor-diff/: Cargo.toml  README.md
crates/editor-diff/src/: compute.rs  display.rs  intra_line.rs  lib.rs  session.rs  types.rs
crates/editor-git/: Cargo.toml  README.md
crates/editor-git/src/: lib.rs  repo.rs
crates/editor-index/: Cargo.toml
crates/editor-index/benches/: index_retrieve.rs
crates/editor-index/src/: cli.rs  code_chunks.rs  config.rs  embedder.rs  error.rs  incremental.rs  indexer.rs  lib.rs  retrieve.rs  schema.rs  store.rs
crates/editor-index/tests/: retrieve_smoke.rs
crates/editor-input/: Cargo.toml  README.md
crates/editor-input/benches/: translate.rs
crates/editor-input/src/: command.rs  lib.rs  mouse.rs  settings_keys.rs  translator.rs
crates/editor-layout/: Cargo.toml  README.md
crates/editor-layout/src/: chrome_shell.rs  engine.rs  lib.rs  status_bar.rs
crates/editor-metadata/: Cargo.toml
crates/editor-metadata/benches/: sidecar_ops.rs
crates/editor-metadata/prompts/: summarize.md
crates/editor-metadata/src/: api_summarizer.rs  config.rs  error.rs  lib.rs  ollama_summarizer.rs  prompt.rs  schema.rs  session.rs  store.rs  summarizer.rs  tasks.rs  update.rs
crates/editor-metadata/tests/: update_loop.rs
crates/editor-render/: Cargo.toml  README.md
crates/editor-render/assets/fonts/: LICENSE_JETBRAINS.txt
crates/editor-render/benches/: frame_overhead.rs  text_layer_prepare.rs
crates/editor-render/src/: backend.rs  diff_layout.rs  editor_renderer.rs  error.rs  gpu.rs  lib.rs  selection_layout.rs  solid_quads.rs  text_layer.rs  timing.rs
crates/editor-render/src/shaders/: solid_quad.wgsl
crates/editor-render/tests/: gpu_resize_stress.rs  visual_smoke.rs
crates/editor-search/: Cargo.toml
crates/editor-search/benches/: search_benches.rs
crates/editor-search/src/: error.rs  in_file.rs  lib.rs  project.rs
crates/editor-settings/: Cargo.toml
crates/editor-settings/src/: error.rs  lib.rs  paths.rs  schema.rs  store.rs
crates/editor-skills/: Cargo.toml  README.md
crates/editor-skills/assets/builtin/ide-conventions/: SKILL.md
crates/editor-skills/assets/builtin/using-git/: SKILL.md
crates/editor-skills/assets/builtin/using-terminal/: SKILL.md
crates/editor-skills/assets/builtin/writing-python/: SKILL.md
crates/editor-skills/assets/builtin/writing-rust/: SKILL.md
crates/editor-skills/assets/builtin/writing-typescript/: SKILL.md
crates/editor-skills/src/: builtin.rs  error.rs  lib.rs  paths.rs  registry.rs  schema.rs  system_info.rs
crates/editor-syntax/: Cargo.toml  README.md
crates/editor-syntax/src/: json.rs  lib.rs  markdown.rs  rust.rs  toml.rs
crates/editor-terminal/: Cargo.toml
crates/editor-terminal/src/: color_resolve.rs  emulator.rs  error.rs  events.rs  input.rs  lib.rs  pty.rs  shell.rs  terminal.rs
crates/editor-terminal/tests/: terminal_smoke.rs
crates/editor-ui/: Cargo.toml  README.md
crates/editor-ui/src/: activity_bar.rs  agent_panel.rs  breadcrumbs.rs  chrome.rs  chrome_layout.rs  command_palette.rs  diff_panel.rs  find_bar.rs  gutter_marks.rs  icons.rs  keybindings.rs  lib.rs  quick_open.rs  quick_open_palette.rs  scrollbar.rs  search_panel.rs  settings_panel.rs  sidebar.rs  status_bar.rs  tab_strip.rs  terminal_header.rs  text_fit.rs  theme.rs
crates/editor-ui/tests/: layout_snapshot.rs  reference_visual.rs
crates/editor-ui/tests/snapshots/: main_chrome_1920x1080.txt  main_chrome_2560x1440.txt  main_chrome_960x600.txt
crates/editor-workspace/: Cargo.toml  README.md
crates/editor-workspace/src/: buffers.rs  entry.rs  error.rs  lib.rs  workspace.rs
crates/editor-workspace/tests/: m13_coherence.rs
docs/: AGENT_GUIDELINES.md  AI_PROVIDERS.md  AI_SETUP.md  AI_TOOLS.md  API_DESIGN_NOTES.md  ARCHITECTURE.md  BENCHMARKS.md  CONCURRENCY.md  CROSS_PLATFORM.md  DIAGNOSING_PERFORMANCE.md  FILE_IO.md  GLOSSARY.md  INPUT_AND_IME.md  INPUT_PIPELINE.md  M09_PLAN.md  MISSIONS.md  MISSION_IMPLEMENTATION_STATUS.md  MVP_ACCEPTANCE.md  MVP_DEFINITION.md  OBSERVABILITY.md  PERFORMANCE_BUDGETS.md  PERFORMANCE_MODEL.md  (+21 more)
(+63 files in other folders)
