###############################################################################
# IDE workspace
#
# A performance-first, native code editor written in Rust.
#
# See:
#   - docs/ARCHITECTURE.md    — crate boundaries and subsystem map
#   - docs/TECH_STACK.md      — dependency choices
#   - docs/MISSIONS.md        — per-mission scope and definition of done
#
# Virtual manifest (no `[package]`): the workspace root is not a crate.
###############################################################################

[workspace]
resolver = "2"
members = [
    "crates/editor-core",
    "crates/editor-input",
    "crates/editor-render",
    "crates/editor-io",
    "crates/editor-ui",
    "crates/editor-app",
]

[workspace.package]
version       = "0.1.0-m01"
edition       = "2021"
rust-version  = "1.94.1"
authors       = ["HiNala <nalamaui30@gmail.com>"]
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/HiNala/IDE"
homepage      = "https://github.com/HiNala/IDE"
readme        = "README.md"
documentation = "https://github.com/HiNala/IDE/tree/main/docs"
keywords      = ["editor", "ide", "wgpu", "performance"]
categories    = ["gui", "text-editors"]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn        = "warn"
unused_must_use               = "warn"
rust_2018_idioms              = { level = "warn", priority = -1 }
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all                           = { level = "warn", priority = -1 }
dbg_macro                     = "warn"
todo                          = "warn"
unimplemented                 = "warn"
print_stderr                  = "warn"
print_stdout                  = "warn"
semicolon_if_nothing_returned = "warn"
needless_pass_by_value        = "warn"
module_name_repetitions       = "allow"
missing_errors_doc            = "allow"
missing_panics_doc            = "allow"

[workspace.dependencies]
anyhow              = "1.0"
thiserror           = "1.0"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt"] }
winit               = "0.30"
wgpu                = "29"
pollster            = "0.4"
ropey               = "1.6"
raw-window-handle   = "0.6"
bytemuck            = { version = "1.16", features = ["derive"] }
memmap2             = "0.9"
arboard               = "3"
parking_lot         = "0.12"
criterion           = { version = "0.5", features = ["html_reports"] }
proptest            = "1"
insta               = "1"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"
panic         = "abort"
debug         = false

[profile.release-dev]
inherits = "release"
debug    = true
strip    = "none"

[profile.bench]
inherits  = "release"
debug     = true
strip     = "none"

[profile.dev]
opt-level       = 0
debug           = true
overflow-checks = true

[profile.test]
opt-level       = 1
debug           = true
overflow-checks = true
