###############################################################################
# IDE workspace — virtual manifest (no `[package]` at root).
###############################################################################

[workspace]
resolver = "2"
members = [
    "crates/editor-ai-provider",
    "crates/editor-ai-tools",
    "crates/editor-app",
    "crates/editor-core",
    "crates/editor-diff",
    "crates/editor-git",
    "crates/editor-input",
    "crates/editor-io",
    "crates/editor-index",
    "crates/editor-metadata",
    "crates/editor-render",
    "crates/editor-search",
    "crates/editor-settings",
    "crates/editor-skills",
    "crates/editor-terminal",
    "crates/editor-ui",
    "crates/editor-workspace",
]

[workspace.package]
version       = "0.1.0-mvp"
edition       = "2021"
rust-version  = "1.95.0"
authors       = ["HiNala <nalamaui30@gmail.com>"]
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/HiNala/IDE"
homepage      = "https://github.com/HiNala/IDE"
readme        = "README.md"
documentation = "https://github.com/HiNala/IDE/tree/main/docs"
keywords      = ["editor", "ide", "wgpu", "performance"]
categories    = ["gui", "text-editors"]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn        = "warn"
unused_must_use               = "warn"
rust_2018_idioms              = { level = "warn", priority = -1 }
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all                           = { level = "warn", priority = -1 }
dbg_macro                     = "warn"
todo                          = "warn"
unimplemented                 = "warn"
print_stderr                  = "warn"
print_stdout                  = "warn"
semicolon_if_nothing_returned = "warn"
needless_pass_by_value        = "warn"
module_name_repetitions       = "allow"
missing_errors_doc            = "allow"
missing_panics_doc            = "allow"

[workspace.dependencies]
anyhow              = "1.0"
thiserror           = "2"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt", "json"] }
winit               = "0.30"
wgpu                = "29"
pollster            = "0.4"
ropey               = "1.6"
unicode-segmentation = "1.13"
raw-window-handle   = "0.6"
bytemuck            = { version = "1.16", features = ["derive"] }
memmap2             = "0.9"
arboard             = "3"
parking_lot         = "0.12"
criterion           = { version = "0.5", features = ["html_reports"] }
proptest            = "1"
memory-stats        = "1.0"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
serde_yaml          = "0.9.34"
directories         = "6"
tempfile            = "3"
crossbeam-channel   = "0.5"
num_cpus            = "1.16"
encoding_rs         = "0.8"
rfd                 = "0.15"
notify              = "8.2"
ignore              = "0.4.25"
nucleo              = "0.5"
similar             = "2.7"
globset             = "0.4.18"
schemars            = { version = "1.2.1", features = ["derive"] }
async-stream        = "0.3.6"
async-trait         = "0.1.89"
backoff             = { version = "0.4", features = ["tokio"] }
bytes               = "1.11.1"
futures             = "0.3.32"
keyring             = "3.6.3"
rand                = "0.8.6"
reqwest             = { version = "0.12.28", default-features = false, features = ["json", "stream", "rustls-tls", "blocking"] }
tokio               = { version = "1.52.1", features = ["macros", "rt-multi-thread", "time", "sync", "io-util"] }
toml                = "0.8.23"
url                 = "2.5.8"
wiremock            = "0.6.5"
chrono              = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
sha2                = "0.10"
regex               = "1"
rusqlite            = { version = "0.32", features = ["bundled"] }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"
panic         = "abort"
debug         = false
incremental   = false

[profile.release-dev]
inherits = "release"
debug    = true
strip    = "none"

[profile.release-with-debug]
inherits = "release"
debug    = true
strip    = "none"

[profile.bench]
inherits  = "release"
debug     = true
strip     = "none"

[profile.dev]
opt-level       = 0
debug           = true
overflow-checks = true

[profile.test]
opt-level       = 1
debug           = true
overflow-checks = true
