[package]
name          = "editor-ai-provider"
description   = "Uniform async AI provider abstraction (Anthropic, OpenAI, Ollama, OpenAI-compatible HTTP)."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }
categories    = { workspace = true }
publish       = false

[lints]
workspace = true

[dependencies]
anyhow              = { workspace = true }
async-stream        = { workspace = true }
async-trait         = { workspace = true }
backoff             = { workspace = true }
bytes               = { workspace = true }
directories         = { workspace = true }
futures             = { workspace = true }
keyring             = { workspace = true }
reqwest             = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
thiserror           = { workspace = true }
tokio               = { workspace = true }
toml                = { workspace = true }
tracing             = { workspace = true }
url                 = { workspace = true }

[dev-dependencies]
wiremock            = { workspace = true }

[[bin]]
name = "ai-smoke"
path = "../../scripts/ai-smoke.rs"
