[package]
name          = "editor-app"
description   = "Binary shell for the IDE project. Owns the event loop and wires subsystems together."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
readme        = "README.md"
documentation = { workspace = true }
keywords      = { workspace = true }
categories    = { workspace = true }
publish       = false

[lints]
workspace = true

[[bin]]
name = "editor-app"
path = "src/main.rs"

[dependencies]
editor-core    = { path = "../editor-core" }
editor-render  = { path = "../editor-render" }
editor-input   = { path = "../editor-input" }
editor-io      = { path = "../editor-io" }
editor-ui      = { path = "../editor-ui" }

anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
winit              = { workspace = true }
wgpu               = { workspace = true }

[build-dependencies]
winres = "0.1"

[dev-dependencies]

[features]
default = []
dev-overlay = []
