[package]
name          = "editor-app"
description   = "Binary shell for the IDE project. Owns the event loop and wires subsystems together."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
readme        = "README.md"
documentation = { workspace = true }
keywords      = { workspace = true }
categories    = { workspace = true }
publish       = false

[lints]
workspace = true

[[bin]]
name = "editor-app"
path = "src/main.rs"

[dependencies]
editor-core    = { path = "../editor-core" }
editor-render  = { path = "../editor-render" }
editor-input   = { path = "../editor-input" }
editor-io      = { path = "../editor-io" }
editor-ui      = { path = "../editor-ui" }

directories        = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
crossbeam-channel  = { workspace = true }
rfd                = { workspace = true }
arboard            = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
memory-stats       = { workspace = true }
winit              = { workspace = true }
wgpu               = { workspace = true }
tracing-tracy      = { version = "0.11", optional = true }

[build-dependencies]
winres = "0.1"

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
dev-overlay = []
# Tracy frame profiler (optional; see M07 observability).
tracy = ["dep:tracing-tracy"]
