[package]
name          = "editor-app"
description   = "Binary shell for the IDE project. Owns the event loop and wires subsystems together."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
readme        = "README.md"
documentation = { workspace = true }
keywords      = { workspace = true }
categories    = { workspace = true }
publish       = false

[lints]
workspace = true

[[bin]]
name = "editor-app"
path = "src/main.rs"

[dependencies]
editor-core         = { path = "../editor-core" }
editor-render       = { path = "../editor-render" }
editor-input        = { path = "../editor-input" }
editor-io           = { path = "../editor-io" }
editor-ui           = { path = "../editor-ui" }
editor-workspace    = { path = "../editor-workspace" }
editor-skills       = { path = "../editor-skills" }
editor-settings     = { path = "../editor-settings" }
editor-terminal     = { path = "../editor-terminal" }
editor-index        = { path = "../editor-index" }
editor-git          = { path = "../editor-git" }
editor-search       = { path = "../editor-search" }
editor-ai-provider  = { path = "../editor-ai-provider" }
editor-ai-tools     = { path = "../editor-ai-tools" }
editor-chat         = { path = "../editor-chat" }

directories        = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
crossbeam-channel  = { workspace = true }
rfd                = { workspace = true }
arboard            = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
memory-stats       = { workspace = true }
winit              = { workspace = true }
wgpu               = { workspace = true }
tracing-tracy      = { version = "0.11", optional = true }

[build-dependencies]
winres = "0.1"

[dev-dependencies]
criterion  = { workspace = true }
tempfile   = { workspace = true }

[features]
default = []
dev-overlay = []
tracy = ["dep:tracing-tracy"]
