[package]
name          = "editor-index"
description   = "Local vector index: sidecars + code chunks (M22)."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }
categories    = { workspace = true }
publish       = false

[lints]
workspace = true

[dependencies]
async-trait       = { workspace = true }
chrono            = { workspace = true }
editor-metadata   = { path = "../editor-metadata" }
editor-workspace  = { path = "../editor-workspace" }
globset           = { workspace = true }
ignore            = { workspace = true }
reqwest           = { workspace = true }
rusqlite          = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
sha2              = { workspace = true }
thiserror         = { workspace = true }
tokio             = { workspace = true }
toml              = { workspace = true }
tree-sitter       = "0.24"
tree-sitter-rust  = "0.24"

[dev-dependencies]
criterion         = { workspace = true }
tempfile          = { workspace = true }
tokio             = { workspace = true }

[[bench]]
name = "index_retrieve"
harness = false
