[package]
name          = "editor-metadata"
description   = "Per-file metadata sidecars, session logs, and project tasks (M21)."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }
categories    = { workspace = true }
publish       = false

[lints]
workspace = true

[dependencies]
async-trait         = { workspace = true }
chrono              = { workspace = true, features = ["clock"] }
regex               = { workspace = true }
reqwest             = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
serde_yaml          = { workspace = true }
sha2                = { workspace = true }
thiserror           = { workspace = true }
tokio               = { workspace = true }
toml                = { workspace = true }
tracing             = { workspace = true }
url                 = { workspace = true }

[dev-dependencies]
criterion           = { workspace = true }
tempfile            = { workspace = true }
tokio               = { workspace = true }

[[bench]]
name = "sidecar_ops"
harness = false
