[package]
name          = "editor-render"
description   = "GPU rendering (wgpu + glyphon) for the IDE project. Owns all GPU state."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
readme        = "README.md"
documentation = { workspace = true }
keywords      = { workspace = true }
categories    = { workspace = true }
publish       = false

[lints]
workspace = true

[dependencies]
editor-core       = { path = "../editor-core" }
wgpu      = { workspace = true }
winit     = { workspace = true }
pollster  = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }

[features]
default = []
