[package]
name          = "editor-render"
description   = "GPU rendering (wgpu + glyphon in M04) for the IDE project."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
readme        = "README.md"
documentation = { workspace = true }
keywords      = { workspace = true }
categories    = { workspace = true }
publish       = false

[lints]
workspace = true

[dependencies]
editor-core         = { path = "../editor-core" }
editor-diff         = { path = "../editor-diff" }
editor-ui           = { path = "../editor-ui" }
editor-terminal     = { path = "../editor-terminal" }
ropey               = { workspace = true }
wgpu                = { workspace = true }
winit               = { workspace = true }
raw-window-handle   = { workspace = true }
bytemuck            = { workspace = true }
pollster            = { workspace = true }
thiserror           = { workspace = true }
tracing             = { workspace = true }
static_assertions   = "1"
glyphon             = "0.11.0"
cosmic-text         = "0.18.2"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name    = "frame_overhead"
harness = false

[[bench]]
name    = "text_layer_prepare"
harness = false

[features]
default = ["dev-hud"]
# Developer HUD string formatting (full GPU text overlay needs M04 text layer).
dev-hud = []
